system changed to agentic system

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,5 @@
 GEMINI_API_KEY=AIzaSyB1_6msNZIKGZ06JmepGcDXjzVK00Tz798
+# YouTube Data API v3 Key (optional - for real video searches)
+YOUTUBE_API_KEY=AIzaSyCbY8O0OYXte-oA9cnpr6eBmoWkXmS_owA
+
+TAVILY_API_KEY=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
