--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,7 +18,16 @@ dependencies = [
     "email-validator>=1.1.3",
     "langchain>=0.1.0",
     "langchain-google-genai>=0.1.0",
-    "google-generativeai>=0.3.0"
+    "langchain-tavily>=0.1.0",
+    "tavily-python>=0.3.0",
+    "google-generativeai>=0.3.0",
+    "aiohttp>=3.8.0",
+    "crawl4ai>=0.2.0",
+    "beautifulsoup4>=4.12.0",
+    "lxml>=4.9.0",
+    "playwright>=1.54.0",
+    "firecrawl-py>=2.16.2",
+    "requests>=2.32.4",
 ]
 
 [project.optional-dependencies]
