--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
-GEMINI_API_KEY=AIzaSyB1_6msNZIKGZ06JmepGcDXjzVK00Tz798
+GEMINI_API_KEY=AIzaSyA3WDG19SZwqYU9Fne4mz7uj2bhPs1CnxQ
+#AIzaSyB1_6msNZIKGZ06JmepGcDXjzVK00Tz798
 # YouTube Data API v3 Key (optional - for real video searches)
 YOUTUBE_API_KEY=AIzaSyCbY8O0OYXte-oA9cnpr6eBmoWkXmS_owA
 
