complete loading page implementation

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,12 @@
     "test:unit": "vitest run --exclude src/test/integration",
     "test:e2e": "npm run test:integration",
     "deploy:staging": "npm run build:staging && npm run deploy:upload:staging",
-    "deploy:production": "npm run build:production && npm run deploy:upload:production",
+    "deploy:production": "npm run build:production && npm run optimize:production && npm run deploy:upload:production",
     "deploy:upload:staging": "echo 'Upload to staging server'",
     "deploy:upload:production": "echo 'Upload to production server'",
+    "optimize:production": "node scripts/optimize-production.js",
+    "check:deployment": "node scripts/deployment-readiness.js",
+    "prepare:deploy": "npm run build:production && npm run optimize:production && npm run check:deployment",
     "health-check": "node scripts/health-check.js",
     "validate-build": "node scripts/validate-build.js"
   },
@@ -66,11 +69,15 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "gzip-size": "^7.0.0",
     "jsdom": "^26.1.0",
+    "lighthouse": "^12.8.0",
     "msw": "^2.10.4",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "puppeteer": "^24.15.0",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.43.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4",
