--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,7 +28,20 @@ dependencies = [
     "playwright>=1.54.0",
     "firecrawl-py>=2.16.2",
     "requests>=2.32.4",
+    "pytest>=8.4.1",
 ]
+
+[build-system]
+requires = ["setuptools>=45", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["app*"]
+exclude = ["tests*", "test_*", "*_test*", "chroma_db*", "test_chroma_db*"]
+
+[tool.setuptools]
+package-dir = {"" = "."}
 
 [project.optional-dependencies]
 dev = [
@@ -36,7 +49,3 @@ dev = [
     "black>=21.7b0",
     "flake8>=3.9.2"
 ]
-
-[build-system]
-requires = ["setuptools>=45", "wheel"]
-build-backend = "setuptools.build_meta"
