question screen implemented

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,18 @@ log/
 # System Files
 .DS_Store
 Thumbs.db
+
+# Test Files
+**/test/
+**/__tests__/
+*.test.js
+*.test.jsx
+*.test.ts
+*.test.tsx
+*.spec.js
+*.spec.jsx
+*.spec.ts
+*.spec.tsx
+test_*.py
+*_test.py
+check_*.py
