--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "firecrawl-py>=2.16.2",
     "requests>=2.32.4",
     "pytest>=8.4.1",
+    "mem0ai>=0.1.115",
+    "chromadb>=1.0.15",
 ]
 
 [build-system]
