--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,7 +20,6 @@ dependencies = [
     "langchain-google-genai>=0.1.0",
     "langchain-tavily>=0.1.0",
     "tavily-python>=0.3.0",
-    "google-generativeai>=0.3.0",
     "aiohttp>=3.8.0",
     "crawl4ai>=0.2.0",
     "beautifulsoup4>=4.12.0",
@@ -31,6 +30,7 @@ dependencies = [
     "pytest>=8.4.1",
     "mem0ai>=0.1.115",
     "chromadb>=1.0.15",
+    "google-genai>=1.4.0",
 ]
 
 [build-system]
